--- a/accounts-payable-automation.html
+++ b/accounts-payable-automation.html
@@ -114,12 +114,12 @@ Icon for services and Projects -->
         <div class=" row justify-content-between align-items-center">
           <!-- Text, Button, and Content on the left (for mobile view) -->
           <div class="col-xl-6 col-lg-6 col-12 text-center order-1 order-md-1">
-            <h2 class="mb-6" style="background-image: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">
+            <h2 class="mb-6" style=" background-image: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">
               Accounts Payable Automation
             </h2>
             <p class="mt-3">Eliminate repetitive tasks in accounts payable process by 60% with AI-powered Automation</p>
             <!-- Modern Gradient Button -->
-            <a href="#demo-form" class="btn btn-gradient mt-4 mb-4">Book a Demo</a>
+            <a href="./contact.html" class="btn btn-gradient mt-4 mb-4">Book a Demo</a>
           </div>
 
           <!-- Image on the right (will change to below content in mobile) -->
@@ -135,6 +135,7 @@ Icon for services and Projects -->
   /* Move the banner content 40px higher */
 .banner-content {
   margin-top: -40px; /* Moves the content 40px higher */
+  
 }
 
 /* Make sure the image is responsive */
@@ -191,76 +192,29 @@ Icon for services and Projects -->
       font-size: 14px; /* Reduce font size */
     }
   }
+/* Tablet-specific adjustments */
+@media (min-width: 768px) and (max-width: 1024px) {
+  .banner-image {
+    width: 60%; /* Adjust width for tablets */
+    margin: 0 auto; /* Center the image */
+  }
 
+  .banner-content .row {
+    text-align: center; /* Ensure alignment for better layout */
+  }
+
+  .banner-content h2 {
+    font-size: 24px; /* Adjust heading size for tablets */
+  }
+
+  .banner-content p {
+    font-size: 16px; /* Adjust paragraph size */
+  }
+}
 </style>
-
-<!--hero section end-->
-
-<!-- <section class="page-title" data-bg-img="images/services_Images/EDI/banner1.jpg">
-  <div class="container">
-    <div class="row justify-content-center text-center">
-      <div class="col-lg-8">
-        <div class="theme-breadcrumb-box">
-        <h1>Electronic Data Interchange </h1>
-        <nav aria-label="breadcrumb" class="page-breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html"><i class="las la-home me-1"></i>Home</a>
-            </li>
-            <li class="breadcrumb-item active" aria-current="page">Electronic Data Interchange </li>
-          </ol>
-        </nav>
-        </div>
-      </div>
-    </div>
-
-  </div>
-</section> -->
-<!--hero section end--> 
-<!--body content start-->
 
 <div class="page-content">
 
-<!--blog start-->
-
-<!-- <section>
-  <div class="container ">
-    <div class="row">
-      <div class="col-12 col-lg-9 mb-6 mb-lg-0 order-lg-1 ps-lg-5">
-        <div class="service-item">
-          <div class="service-image mb-5">
-            <img src="images/services_Images/EDI/banner2.jpg" class="img-fluid" alt="...">
-          </div>
-          <p class="mb-0">SMI offers a powerful EDI software solution that seamlessly manages every aspect of the EDI process, integrating all your back-end systems including ERP, accounting, marketing, and more. Our solution streamlines data exchange, improving efficiency and connectivity across your entire business ecosystem</p>
-          
-        </div>
-      </div>
-      <div class="col-12 col-lg-3">
-        <div class="service-widget widget widget_nav_menu">
-          <ul id="menu-services-menu" class="menu mb-0">
-            <li class="menu-item current-menu-item">
-              <a href="ui-ux-experience.html">UI/UX Experience</a>
-            </li>
-            <li class="menu-item">
-              <a href="digital-marketing.html">Digital Marketing</a>
-            </li>
-            <li class="menu-item">
-              <a href="mobile-development.html">Mobile Development</a>
-            </li>
-            <li class="menu-item">
-              <a href="social-media-marketing.html">Social Media Marketing</a>
-            </li>
-            <li class="menu-item">
-              <a href="website-development.html">Website Development</a>
-            </li>
-            <li class="menu-item">
-              <a href="business-strategy.html">Business Strategy</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 <br> <br>
 <section >
@@ -714,7 +668,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 <br>
-<h2 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Major Pain Points in the Accounts Payable Process</h2>
+<h3 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Major Pain Points in the Accounts Payable Process</h3>
 <div class="timeline-container">
   <div class="timeline">
       <!-- First row of events (Step 1 to 4) -->
@@ -1025,7 +979,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 </style>
 <br>
-<h2 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Why Bautomate is Beneficial to Your Business?</h2>
+<h3 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Why Bautomate is Beneficial to Your Business?</h3>
 
 <div class="modern-grid-container">
   <div class="modern-grid-item">
@@ -1156,7 +1110,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 
 <br>
-<h2 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Bautomate Account Payable Process</h2>
+<h3 style="text-align: center; background: linear-gradient(to right, #FDBE01, #B60E0D); -webkit-background-clip: text; color: transparent;">Bautomate Account Payable Process</h3>
 <div class="flowchart-container">
   <img src="./images/accounts payable automation/Bautomate-Account-Payable-Process.webp" alt="Accounts Payable Automation Flowchart" class="flowchart">
 </div>
@@ -1346,7 +1300,6 @@ document.addEventListener("DOMContentLoaded", () => {
 }
 
 .faq-item.open .faq-question .faq-icon {
-  transform: rotate(45deg);
   transition: transform 0.3s ease;
 }
 </style>
@@ -1377,8 +1330,32 @@ function toggleFaq(element) {
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
+ 
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
+ 
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+ 
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
 </script>
 <!--footer end-->
 
