all changes mentioned in bug report.xlsx done

--- a/articles.html
+++ b/articles.html
@@ -41,7 +41,7 @@
 <!--== shortcodes -->
 <link href="css/shortcodes.css" rel="stylesheet" type="text/css" />
 
-<!--== theme-style -->
+<link href="css/home.css" rel="stylesheet" type="text/css" />
 <link href="css/theme-style.css" rel="stylesheet" type="text/css" />
 
 <link rel="stylesheet" href="css/articles.css" type="text/css">
