--- a/blogs.html
+++ b/blogs.html
@@ -43,6 +43,7 @@
 
 <!--== theme-style -->
 <link href="css/theme-style.css" rel="stylesheet" type="text/css" />
+<link href="css/home.css" rel="stylesheet" type="text/css" />
 
 <!-- inject css end -->
 
