--- a/intelligent-contract-management.html
+++ b/intelligent-contract-management.html
@@ -67,8 +67,8 @@ Icon for services and Projects -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
 
     <link href="css/intelligent-contract-management.css" rel="stylesheet" type="text/css" />
-
 </head>
+
 
 <body>
 
@@ -95,7 +95,7 @@ Icon for services and Projects -->
 
         <!-- Image Section -->
         <div class="banner-business-image">
-            <img src="images/Bautomate/contract-automation-hero-image.webp" alt="Intelligent Business Automation"
+            <img src="images/Bautomate/contract-automation-hero-image.jpg" alt="Intelligent Business Automation"
                 class="banner-business-responsive-image">
         </div>
     </div>
@@ -411,7 +411,7 @@ Icon for services and Projects -->
             </div>
     
             <div class="row">
-                <textarea name="" id="" rows="20" placeholder="Message"></textarea>
+                <textarea name="" id="" rows="2" placeholder="Message"></textarea>
             </div>
     
         </div>
