--- a/ai-ml-services.html
+++ b/ai-ml-services.html
@@ -65,10 +65,36 @@
 Icon for services and Projects -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flaticon@2.1.0/css/flaticon.min.css">
-<!-- 
-    <link href="css/intelligent-contract-management.css" rel="stylesheet" type="text/css" />
-    <link rel="stylesheet" href="css/ivr-automation.css">
-    <link rel="stylesheet" href="css/software-testing.css"> -->
+
+    <style>
+
+        @media screen and (max-width: 700px) {
+
+          .mb-4.mt-5 {
+            font-size: 2rem !important;
+            line-height: 2.5rem !important;
+          }
+
+          p.mt-5 {
+            max-width: 90%;
+            margin: 0 auto;
+          }
+          
+          .services-container {
+            margin-top: 4rem;
+          }
+
+          .service-desc p {
+            font-size: 14px;
+            color: white;
+          }
+
+          .service-desc a.rounded-button {
+            bottom: 10px !important;
+          }
+        }
+
+    </style>
 
 
 </head>
@@ -78,9 +104,9 @@ Icon for services and Projects -->
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/AIML/aiml-banner.jpg');">
-    <div class="banner-content">
-      <div class="container">
+  <div class="banner-img" style="background-image: url('images/services_Images/AIML/aiml-banner.png');">
+    <div class="banner-content" style="max-height: max-content;">
+      <div class="container" style="max-height: max-content;">
         <div class="row justify-content-center text-center">
           <div class="col-xl-10 col-lg-12 col-12">
             <h1 class="mb-4 mt-5">Artificial Intelligence & Machine Learning Services</h1>
@@ -94,7 +120,7 @@ Icon for services and Projects -->
   </div>
 </section>
  
-<section>
+<section class="services-container">
     <div class="container" style="margin-top: 3rem">
         <div class="row justify-content-center text-center mb-5">
             <div class="col-lg-8 col-md-12">
