--- a/asset-tracking-with-ble-beacon.html
+++ b/asset-tracking-with-ble-beacon.html
@@ -330,7 +330,7 @@
 <!-- Award and client section -->
 <section class="pt-0 text-center awards-iot-bg">
     <h6 class="award-iot-title"style=" text-align: center; font-size:40px;padding-top:40px;padding-bottom:40px;line-height:30px">Awards & Recognitions</h6>
-    <div class="container">
+    <div class="container pb-4">
       <div class="row">
         <div class="col">
           <div class="owl-carousel no-pb" data-center="true" data-dots="false" data-items="5" data-xxl-items="5" data-xl-items="5" data-lg-items="4" data-md-items="3" data-sm-items="2" data-autoplay="true">
