--- a/index.html
+++ b/index.html
@@ -141,9 +141,15 @@
           <div class="row align-items-center">
             <div class="col-xl-12 col-lg-12 col-12 text-center animate__fadeInDown">
               <h1 class="animate__animated animate__fadeInUp" data-aos="fade-up">Delivering</h1>
-  <div class="banner-video-text2 mt-lg-2 mb-lg-2 mt-sm-0 mb-sm-0">
+  <!-- <div class="banner-video-text2 mt-lg-2 mb-lg-2 mt-sm-0 mb-sm-0">
     <h1 class="animate__animated animate__fadeInDown" data-aos="fade-down">Real Results in</h1>
+  </div> -->
+  <div class="body-txt">
+    <div class="text-container-txt">
+      <h1 class="styled-text-txt">Real Results in</h1>
+    </div>
   </div>
+
   <h1 class="animate__animated animate__fadeInUp" data-aos="fade-up">
     Digital <span class="highlight animate__animated animate__fadeInDown" data-aos="fade-down">Transformation</span>
   </h1>
