--- a/oee-monitoring.html
+++ b/oee-monitoring.html
@@ -452,7 +452,7 @@
                     <div class="service-item style-2">
                       <div class="service-image">
                         <img
-                          src="images/services/oee-f-3.png"
+                          src="images/services/oee-f-3.jpg"
                           class="img-fluid"
                           alt="Automobile"
                         />
@@ -828,7 +828,7 @@
               <div class="modal-body project-modal-body">
                 <div class="project-image-container">
                   <img
-                    src="images/services/oee-f-3.png"
+                    src="images/services/oee-f-3.jpg"
                     alt="Scalability Image"
                     class="img-fluid project-image"
                   />
