--- a/team-collaboration-solution.html
+++ b/team-collaboration-solution.html
@@ -76,6 +76,7 @@
 
   .team-collaboration-testimonial {
     padding: 2rem 0;
+    background-color: #141416;
   }
   
   @media screen and (max-width: 700px) {
@@ -195,7 +196,7 @@
 
 
 <section>
-    <div class="container">
+    <div class="container pb-6">
         <div class="row justify-content-center text-center mb-5 pt-6">
             <div class="col-lg-8 col-md-12">
                 <div class="theme-title">
@@ -619,7 +620,7 @@
 <!-- Award and client section -->
 <section class="pt-0 text-center awards-iot-bg">
   <h6 class="award-iot-title"style=" text-align: center; font-size:40px;padding-top:40px;padding-bottom:40px;">Awards & Recognitions</h6>
-  <div class="container">
+  <div class="container pb-4">
     <div class="row">
       <div class="col">
         <div class="owl-carousel no-pb" data-center="true" data-dots="false" data-items="5" data-xxl-items="5" data-xl-items="5" data-lg-items="4" data-md-items="3" data-sm-items="2" data-autoplay="true">
@@ -658,7 +659,11 @@
 
 <!--testimonial start-->
 
-<section class="team-collaboration-testimonial" data-bg-img="images/bg/letswork-bg.jpg" data-overlay="9">
+<section class="team-collaboration-testimonial" data-overlay="9">
+  <div style="text-align: center;" class="theme-title">
+    <h6 style="text-align: center; margin-top:20px;">Testimonials</h6>
+    <h2 style="text-align: center;">Where Innomaint Marks its<br> Strong Footprint</h2>
+</div>
   <div class="container">
     <div class="row">
       <div class="col">
@@ -683,9 +688,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   The Software allowed us to manage all our maintenance activities in one place. 
                   Helps tackle costing/budget better and better maintenance scheduling.
@@ -708,9 +713,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   It makes our work easy and systematize, big help to our company. Support are very friendly and active.
                 </p>
@@ -732,9 +737,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   It was good experience intrinsically all the requirements are covered in your software.
                 </p>
@@ -756,9 +761,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   Innomaint provides good service. The application is associated with minimal downtime. Customer care is excellent. Everything is good.
                 </p>
@@ -780,9 +785,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   We hold several long-term AMC with multiple clients for our services. Preventive Maintenance, Report Generation and Ticket Assignments to Technicians are effective with Innomaint. Feature richness, ease of use and reports are the primary reasons for us to choosing Innomaint.
                 </p>
@@ -804,9 +809,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   Our overall experience of the application is Good. Most of the features in the market are available. Service post-sale and customer service are good.
                 </p>
@@ -828,9 +833,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   Innomaint is flexible, adaptable, user friendly and cost effective. It was a good experience monitoring, measuring and managing day-to-day maintenance operations for various facilities and contracts. The web version of the platform is also easy to handle for our technicians, supervisors & engineers.
                 </p>
@@ -852,9 +857,9 @@
                 </div>
               </div>
               <div class="testimonial-content">
-                <div class="testimonial-quote">
+                <!-- <div class="testimonial-quote">
                   <i class="flaticon flaticon-quotes"></i>
-                </div>
+                </div> -->
                 <p>
                   It is a good experience until now. The user interface of the application is good. It is very reliable and efficient in managing tasks and also gives an update on daily basis.
                 </p>
