--- a/freight-forwarding-automation.html
+++ b/freight-forwarding-automation.html
@@ -77,6 +77,26 @@
     </div>
     <div id="header-placeholder"></div>
 
+    <div class="search-input" id="search-input-box">
+      <div class="search-inner-box">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-6">
+              <form role="search" id="search-form" class="search-form d-flex justify-content-between search-inner">
+                <label>
+                  <input type="search" class="search-field" placeholder="Search Here" value="" name="s" />
+                </label>
+                <button type="submit" class="search-submit">
+                  <i class="las la-search"></i>
+                </button>
+                <span class="las la-times close-search" id="close-search" title="Close Search"></span>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="banner-business-container"
         style="background-image: url('images/bautomate-main/Ai\ Driven\ Freight\ Forwarding-banner.jpg'); background-size: cover; background-position: center; background-repeat: no-repeat;">
         <!-- Content Section -->
@@ -89,7 +109,7 @@
                 for Unmatched Efficiency and Speed.
             </p>
             <div class="enquiry-demobutton">
-                <button class="banner-business-demo-button">Request a Free Demo</button>
+                <a href="contact.html"><button class="banner-business-demo-button">Request a Free Demo</button></a>
             </div>
         </div>
     </div>
@@ -392,16 +412,16 @@
     </div>
   </section>    
    
-      <script>
-        window.addEventListener('DOMContentLoaded', (event) => {
-            fetch('header.html')
-                .then(response => response.text())
-                .then(html => {
-                    document.getElementById('header-placeholder').innerHTML = html;
-                })
-                .catch(error => console.error('Error loading the header:', error));
-        });
-     </script>
+  <script>
+    window.addEventListener('DOMContentLoaded', (event) => {
+        fetch('header.html')
+            .then(response => response.text())
+            .then(html => {
+                document.getElementById('header-placeholder').innerHTML = html;
+            })
+            .catch(error => console.error('Error loading the header:', error));
+    });
+  </script>
     
       <!-- footer section -->
       <script>
