--- a/network-infrastructure.html
+++ b/network-infrastructure.html
@@ -176,7 +176,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Identifying Network Vulnerabilities</h5>
                       </div>
-                      <p>We find and fix weak points in your network before they're exploited</p>
+                      <p class="text-left">We find and fix weak points in your network before they're exploited</p>
                   </div>
               </div>
           </div>
@@ -192,7 +192,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Simulating Real-World Threats
                       </div>
-                      <p>We test your network's defense through realistic threat scenarios.</p>
+                      <p class="text-left">We test your network's defense through realistic threat scenarios.</p>
                   </div>
               </div>
           </div>
@@ -208,7 +208,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Tailored Security Solutions</h5>
                       </div>
-                      <p>Customized strategies keep your infrastructure protected.</p>
+                      <p class="text-left">Customized strategies keep your infrastructure protected.</p>
                   </div>
               </div>
           </div>
@@ -224,7 +224,7 @@ Icon for services and Projects -->
                     <div class="featured-title">
                         <h5>Simplifying Your Business Operations</h5>
                     </div>
-                    <p>Continuous Monitoring and Support</p>
+                    <p class="text-left">Continuous Monitoring and Support</p>
                 </div>
             </div>
         </div>
@@ -458,8 +458,32 @@ Icon for services and Projects -->
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
+ 
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
+ 
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+ 
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
 </script>
 
 <!--== jquery -->
