--- a/web-and-mobile-application.html
+++ b/web-and-mobile-application.html
@@ -180,7 +180,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Eliminate App Vulnerabilities</h5>
                       </div>
-                      <p>We identify and address mobile app vulnerabilities to enhance security</p>
+                      <p class="text-left">We identify and address mobile app vulnerabilities to enhance security</p>
                   </div>
               </div>
           </div>
@@ -196,7 +196,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Regular Security Reports
                       </div>
-                      <p>Consistent updates on potential security risks keep you informed.</p>
+                      <p class="text-left">Consistent updates on potential security risks keep you informed.</p>
                   </div>
               </div>
           </div>
@@ -212,7 +212,7 @@ Icon for services and Projects -->
                       <div class="featured-title">
                           <h5>Secure iOS App Extensions</h5>
                       </div>
-                      <p>We protect business-critical data with secure iOS app extensions</p>
+                      <p class="text-left">We protect business-critical data with secure iOS app extensions</p>
                   </div>
               </div>
           </div>
@@ -228,7 +228,7 @@ Icon for services and Projects -->
                     <div class="featured-title">
                         <h5>OS Hardening Techniques</h5>
                     </div>
-                    <p>We implement secure configurations to safeguard your applications</p>
+                    <p class="text-left">We implement secure configurations to safeguard your applications</p>
                 </div>
             </div>
         </div>
@@ -462,8 +462,32 @@ Icon for services and Projects -->
     .then(response => response.text())
     .then(html => {
       document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
     })
     .catch(error => console.error('Error loading the footer:', error));
+ 
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
+ 
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+ 
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
 </script>
 
 <!--== jquery -->
