--- a/ui-ux-design.html
+++ b/ui-ux-design.html
@@ -454,7 +454,7 @@ Icon for services and Projects -->
 
 <br>
 
-    <div id="footer-placeholder"></div>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
 
@@ -496,41 +496,7 @@ Icon for services and Projects -->
 
 
 </body>
-
 <script>
-  window.addEventListener('DOMContentLoaded', (event) => {
-      fetch('header.html')
-      .then(response => response.text())
-      .then(html => {
-          document.getElementById('header-placeholder').innerHTML = html;
-       })
-       .catch(error => console.error('Error loading the header:', error));
-
-       fetch('footer.html')
-      .then(response => response.text())
-      .then(html => {
-          document.getElementById('footer-placeholder').innerHTML = html;
-       })
-       .catch(error => console.error('Error loading the footer:', error));
-  });
-
-</script>
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-      const currentYear = new Date().getFullYear();
-      document.getElementById("currentYear").textContent = currentYear;
-    });
-  
-  document.getElementById('loadMoreButton').addEventListener('click', function() {
-      // Show the extra use cases
-      var extraUseCases = document.querySelector('.extra-usecases');
-      extraUseCases.style.display = 'block';
-     
-      // Hide the "Load More" button after click
-      this.style.display = 'none';
-  });
-  
-   <script>
   fetch('footer.html')
     .then(response => response.text())
     .then(html => {
@@ -554,7 +520,40 @@ Icon for services and Projects -->
         }
       });
     });
+
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
   }
+</script>
+
+<script>
+  window.addEventListener('DOMContentLoaded', (event) => {
+      fetch('header.html')
+      .then(response => response.text())
+      .then(html => {
+          document.getElementById('header-placeholder').innerHTML = html;
+       })
+       .catch(error => console.error('Error loading the header:', error));
+  });
+
+</script>
+<script>
+  document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  
+  document.getElementById('loadMoreButton').addEventListener('click', function() {
+      // Show the extra use cases
+      var extraUseCases = document.querySelector('.extra-usecases');
+      extraUseCases.style.display = 'block';
+     
+      // Hide the "Load More" button after click
+      this.style.display = 'none';
+  });
 </script>
   
 </html>
