vinushiya changes updated

--- a/document-management-system.html
+++ b/document-management-system.html
@@ -179,7 +179,7 @@ style="background-image: url('images/bautomate-main/document-banner.jpg'); backg
 <div class="container ">
   <div class="row">
     <div class="col-12 col-lg-4">
-      <div class="theme-title ">
+      <div class="theme-title benefits-documentrobotic">
         <h6>Benefits</h6>
         <h2>What are the Document Management System
           Benfits</h2>
