--- a/visitor-management-system-software.html
+++ b/visitor-management-system-software.html
@@ -20,6 +20,7 @@
 
     <!--== bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
+  
 
     <!--== magnific-popup -->
     <link href="css/magnific-popup.css" rel="stylesheet" type="text/css" />
@@ -53,6 +54,8 @@
 
     <!-- innomiant solution for css -->
     <link href="css/innomiant.css" rel="stylesheet" type="text/css" />
+    <link href="css/home.css" rel="stylesheet" type="text/css" />
+    <link href="css/popup.css" rel="stylesheet" type="text/css" />
     <!-- contact icon  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -63,7 +66,6 @@
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-chubby/css/uicons-thin-chubby.css'>
     <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-rounded/css/uicons-thin-rounded.css'>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fi-css@2.0.1/dist/fi.css" />
-
 
     <link
     rel="stylesheet"
@@ -97,7 +99,6 @@
     rel="stylesheet"
     href="https://cdn-uicons.flaticon.com/2.6.0/uicons-thin-straight/css/uicons-thin-straight.css"
   />
-
 
 
 </head>
@@ -183,7 +184,6 @@
  
 <!--hero section end-->
 
-
         <!-- Benefit section -->
         <section>
             <div class="container">
@@ -203,7 +203,7 @@
                             </div>
                             <div class="featured-desc">
                                 <div class="featured-title">
-                                    <h5>Streamline Visitor Management</h5>
+                                    <h5>Visitor Management</h5>
                                 </div>
                                 <p>Send pre-registration visitor passes to upcoming visitors so that no one waits at the security desk unnecessarily.</p>
                             </div>
@@ -966,7 +966,7 @@
                         </div>
                         <div class="portfolio-desc">
                           <div class="portfolio-cat" style="text-align: center;" >
-                            <a href="#" rel="tag">IoT ENERGY<br> MONITORING</a>
+                            <span rel="tag">IoT ENERGY<br> MONITORING</span>
                           </div>
                          
                         </div>
