--- a/article-visa.html
+++ b/article-visa.html
@@ -45,6 +45,7 @@
 <link href="css/theme-style.css" rel="stylesheet" type="text/css" />
 
 <link rel="stylesheet" href="css/articles.css" type="text/css">
+<link href="css/home.css" rel="stylesheet" type="text/css" />
 
 <!-- inject css end -->
 
@@ -330,9 +331,39 @@
 </div>
 
 <!--body content end--> 
+    
+<script>
+  fetch('footer.html')
+    .then(response => response.text())
+    .then(html => {
+      document.body.insertAdjacentHTML('beforeend', html);
+      initializeFooter();
+    })
+    .catch(error => console.error('Error loading the footer:', error));
 
+  function initializeFooter() {
+    // Collapsible Section Handling with Smooth Transition
+    document.querySelectorAll('.footer-section-title').forEach((title) => {
+      title.addEventListener('click', () => {
+        const section = title.parentElement;
+        const menu = section.querySelector('.footer-menu');
+        const isOpen = section.classList.toggle('open');
 
-<div id="footer-placeholder"></div>
+        if (isOpen) {
+          menu.style.maxHeight = menu.scrollHeight + 'px';
+        } else {
+          menu.style.maxHeight = '0';
+        }
+      });
+    });
+
+    // Dynamic Current Year Update
+    document.addEventListener("DOMContentLoaded", () => {
+      const currentYear = new Date().getFullYear();
+      document.getElementById("currentYear").textContent = currentYear;
+    });
+  }
+</script>
 <!--footer end-->
 
 </div>
