contact us favicon issue resolved

--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
   <title>SMI - Get a Proposal</title>
 
   <!-- Favicon Icon -->
-  <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
+  <link rel="shortcut icon" href="images/smi-icon.png" />
 
   <!-- inject css start -->
 
