--- a/visitor-management-system-software.html
+++ b/visitor-management-system-software.html
@@ -14,7 +14,7 @@
     <title>Smi-visitor-management-system-software</title>
 
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
+    <link rel="shortcut icon" href="images/smi-icon.png" />
 
     <!-- inject css start -->
 
