`Update enquiry-automation.html and vapt.html with favicon and CSS changes`

--- a/enquiry-automation.html
+++ b/enquiry-automation.html
@@ -14,7 +14,8 @@
     <title>Smi-enquiry</title>
 
     <!-- Favicon Icon -->
-    <link rel="shortcut icon" href="images/smi-icon.png" />
+    <link rel="shortcut icon" href="images/smi-icon-favicon.png" />
+    <link href="css/home.css" rel="stylesheet" type="text/css" />
 
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 
