contact changes done, added form in 3pages

--- a/contact.html
+++ b/contact.html
@@ -141,8 +141,6 @@
 
       <!--contact start-->
 
-      <section>
-
         <div class="project-container">
           <div class="project-image">
             <img src="images/contact-image.jpg" alt="Creative project in progress">
@@ -156,14 +154,13 @@
                 LLC</strong>, we offer a free 30-minute consultation to help you get started on your project.
               Our experts are here to understand your needs, discuss potential solutions, and outline a roadmap to
               achieve your business goals.
-
             </p>
-
           </div>
         </div>
 
 
 
+        <section>
 
         <div class="container">
           <div class="row">
@@ -204,6 +201,9 @@
                       <a href="tel:+971504216518" style="text-decoration: none; color: inherit;">
 
                         +971 50 421 6518
+                      </a><br>
+                      <a href="tel:+971 4554 3952" style="text-decoration: none; color: inherit;">
+                        +971 4554 3952
                       </a>
                     </p>
                   </div>
