--- a/header.html
+++ b/header.html
@@ -156,9 +156,21 @@
                       <ul class="dropdown-menu-sub">
                         <li><a class="dropdown-item" href="Electronic-Data-Interchange.html">Electronic Data Interchange</a></li>
                         <li><a class="dropdown-item" href="Ruby-on-Rails.html">Ruby On Rails Development</a></li>
-                        <li><a class="dropdown-item" href="Enterprise-Integration-Services.html">Enterprise Integration Services</a></li>
-                        <li><a class="dropdown-item" href="ar&vr-services.html">VR & AR App Development Services</a></li>
+                        <li><a class="dropdown-item" href="Enterprise-Integration-Services.html">Enterprise Integration <span class="drop-downside">Services</span></a></li>
+                        <li><a class="dropdown-item" href="ar&vr-services.html"> VR & AR App Development <span class="drop-downside">Services</span></a></li>
                       </ul>
+                      <!-- small sreen size css -->
+                    <style>
+                     .drop-downside {
+                         display: inline; 
+                           }
+                     @media (max-width: 376px) {
+                      .drop-downside {
+                           display: block;
+                           text-align: left; 
+                                  }
+                             }
+                    </style>
                     </li>
                     <li class="dropdown-submenu">
                       <a
