--- a/tech-talent-services.html
+++ b/tech-talent-services.html
@@ -108,7 +108,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('./images/tech-talent-service/status-ability-skills-expand-branch-connection.jpg');">
+  <div class="banner-img" style="background-image: url('./images/bg/tech-talent-services-banner.png');">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
