about page Why choose us icon issue fixed and mobile view completed

--- a/about.html
+++ b/about.html
@@ -285,7 +285,7 @@
                 
                         <div class="choice2-right-bottom">
                             <div class="circle2-right-bottom">
-                                <img src="images/about/SUCCESS.png" alt="smart"/>
+                                <img src="images/about/success.png" alt="smart"/>
                             </div>
                 
                             <div class="text2-right-bottom">
