--- a/invoice-processing-automation.html
+++ b/invoice-processing-automation.html
@@ -107,7 +107,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('./images/invoice automation/invoice-banner.png');">
+  <div class="banner-img" style="background-image: url('./images/bg/Invoice-Processing-Automation-banner.png');">
     <div class="banner-content">
       <div class="container">
         <div class="mb-6 row justify-content-between align-items-center">
