--- a/accounts-payable-automation.html
+++ b/accounts-payable-automation.html
@@ -108,7 +108,7 @@ Icon for services and Projects -->
 <!--hero section start-->
 <!--hero section start-->
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('./images/accounts payable automation/man-using-smartphone-holding-credit-card_34168-1765.avif');">
+  <div class="banner-img" style="background-image: url('./images/bg/a-p-a-bg.jpg');background-size: cover;background-repeat: no-repeat;background-position: center;">
     <div class="banner-content">
       <div class="container">
         <div class=" row justify-content-between align-items-center">
