--- a/ai-ml-services.html
+++ b/ai-ml-services.html
@@ -115,7 +115,7 @@ Icon for services and Projects -->
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/AIML/aiml-banner.png');">
+  <div class="banner-img" style="background-image: url('images/bg/ai&mil-bg.png');">
     <div class="banner-content" style="max-height: max-content;">
       <div class="container" style="max-height: max-content;">
         <div class="row justify-content-center text-center">
