--- a/custom-software-development.html
+++ b/custom-software-development.html
@@ -121,7 +121,7 @@ Icon for services and Projects -->
 <!--header end-->
 
 <!--hero section start-->
-<section class="hero-section-pricing" style="background-image: url('./images/bg/custom-software-banner.jpg');">
+<section class="hero-section-pricing" style="background-image: url('./images/bg/custom-software-bg.jpg');background-size: cover;background-repeat: no-repeat;background-position: center;">
   <div class="overlay-pricing">
     <div class="content-pricing">
       <h1 class="title-pricing">Custom Software Development</h1>
