--- a/data-science-services.html
+++ b/data-science-services.html
@@ -134,7 +134,7 @@ Icon for services and Projects -->
 <!--header end-->
 
 <!--hero section start-->
-<section class="hero-section-pricing" style="background-image: url('./images/development-services/data-science-services-banner.jpg');">
+<section class="hero-section-pricing" style="background-image: url('./images/bg/data-science-bg.png');">
     <div class="overlay-pricing">
       <div class="content-pricing">
         <h1 class="title-pricing">Data Science Services</h1>
