--- a/bigdata-consulting-services.html
+++ b/bigdata-consulting-services.html
@@ -113,7 +113,7 @@
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/bg/bigdata-banner.png');">
+  <div class="banner-img" style="background-image: url('images/bg/bigdata-banner.png');background-size: cover;background-repeat: no-repeat;background-position: center;">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
