--- a/blog-volume-hire.html
+++ b/blog-volume-hire.html
@@ -79,7 +79,7 @@
 
 <!--hero section start-->
 
-<section class="blogpage page-title" data-bg-img="../images/blog/wavy_background.jpg">
+<section class="blogpage page-title" data-bg-img="images/blog/wavy_background.jpg">
   <div class="container">
     <div class="row justify-content-center text-center">
       <div class="col-lg-8">
