--- a/cloud-computing-services.html
+++ b/cloud-computing-services.html
@@ -129,7 +129,7 @@
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/Cloud/B1.png');">
+  <div class="banner-img" style="background-image: url('images/bg/cloud-computing-bg.png');background-size: cover;background-repeat: no-repeat;background-position: center;">
     <div class="banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
