--- a/database-migration.html
+++ b/database-migration.html
@@ -155,7 +155,7 @@ Icon for services and Projects -->
 
 
 <section class="banner py-0">
-  <div class="banner-img" style="background-image: url('images/services_Images/DatabaseMigration/migration-banner.png'); background-position-y: 40%;">
+  <div class="banner-img" style="background-image: url('images/bg/database-migration-bg.jpg');background-size: cover;background-repeat: no-repeat;background-position: center;">
     <div class="dbMigration banner-content">
       <div class="container">
         <div class="row justify-content-center text-center">
